--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="swipe_up_to_register">swipe up to register</string>
+    <string name="send">Send</string>
+    <string name="email">email</string>
+    <string name="forgotpwd">Did you forgot your password ?</string>
+    <string name="logout">Log out</string>
 </resources>
