--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="navigation_drawer_close">close drawer</string>
 
     <!-- SideMenu -->
-    <string name="qotd_label">Quote of the Day</string>
-    <string name="all_quotes_label">All Quotes</string>
+    <string name="qotd_label">Q.O.T.D</string>
+    <string name="all_quotes_label">All</string>
     <string name="favorite_label">Favorites</string>
     <string name="profile_label">Profile</string>
     <string name="home_label">Home</string>
@@ -24,6 +24,7 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="swipe_up_to_register">swipe up to register</string>
+    <string name="swipe_down_to_cancel">swipe down to cancel registration</string>
     <string name="send">Send</string>
     <string name="email">email</string>
     <string name="forgotpwd">Did you forgot your password ?</string>
@@ -32,6 +33,13 @@
     <string name="email_label">Email:</string>
     <string name="update_to_your_new_email">Update to your new email</string>
     <string name="birthplace">Birthplace:</string>
-    <string name="update_your_birthplace">Update your Birthplace</string>
+    <string name="birthdate">Birth date:</string>
+    <string name="update_your_birthplace">Update your birth place</string>
+    <string name="update_your_birthdate">Update your birth date</string>
     <string name="user_info">User Info</string>
+    <string name="platforms">Platforms</string>
+    <string name="account_management">Account Management</string>
+    <string name="settings">Settings</string>
+    <string name="register">Create New Account</string>
+    <string name="register_method_label">or register by using your email</string>
 </resources>
