--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
+    <string name="username_label">Username</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
@@ -27,7 +28,7 @@
     <string name="swipe_up_to_register">swipe up to register</string>
     <string name="swipe_down_to_cancel">swipe down to cancel registration</string>
     <string name="send">Send</string>
-    <string name="email">email</string>
+    <string name="email">Email</string>
     <string name="forgotpwd">Did you forgot your password ?</string>
     <string name="logout">Log out</string>
     <string name="write_the_email_to_receive_password_reset_request">Write the email to receive password reset request</string>
@@ -43,4 +44,9 @@
     <string name="settings">Settings</string>
     <string name="register">Create New Account</string>
     <string name="register_method_label">or register by using your email</string>
+
+    <string name="email_sent_successfully">Password reset request is sent successfully \u2713 </string>
+    <string name="email_sent_failed">Password reset request has failed \u2716 </string>
+
+    <string name="empty_email_input">Please enter your email.</string>
 </resources>
